--- a/calculator.html
+++ b/calculator.html
@@ -6,6 +6,12 @@ function cube() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 3);
 }
+function quad () {
+	var num = document.getElementById("n1");
+	num.value = Math.pow(num.value, 4);
+
+}
+
 </script>
 </head>
 <body>
@@ -14,6 +20,7 @@ function cube() {
  <input type="text" id="n1">
  <p>
  <button onclick="cube()"> x^3 </button>
+ <button onClick="quad ()">x^4</sup></button>
  </p>
 </body>
 </html>
